[package]
name = "shutdown-async"
version = "0.0.0"
edition = "2021"
description = "Asynchronous Shutdown"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "asynchronous", "shutdown"]
license = "MIT"

[dependencies]
tokio = { version = "1.27.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }