[package]
name = "shutdown-async"
# When publishing a new version:
# - Update README.md
# - Build the crate to update the version in Cargo.lock
version = "0.1.1"
edition = "2021"
description = "Asynchronous Shutdown"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "asynchronous", "shutdown"]
license = "MIT"

[[test]]
name = "test"
path = "test/test.rs"


[dependencies]
tokio = { version = "1.27.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }